created who to follow card on blog page, with ability to follow to other users that the logged in user is not followed yet.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -23,3 +23,13 @@
 ::-webkit-scrollbar-thumb:hover {
     background: #6f20ee;
 }
+
+@layer base {
+    input[type="number"]::-webkit-outer-spin-button,
+    input[type="number"]::-webkit-inner-spin-button,
+    input[type="number"] {
+        -webkit-appearance: none;
+        margin: 0;
+        -moz-appearance: textfield !important;
+    }
+}
